--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "express-ts-btp-api",
   "version": "1.0.0",
   "description": "",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "url": "https://github.com/schw4be/express-ts-btp-api"
-  },  
+  },
   "keywords": [],
   "author": "Markus Klein",
-  "license": "ISC"
+  "license": "ISC",
+  "scripts": {
+    "build": "mbt build --mtar express-ts-btp-api.mtar",
+    "deploy": "cf deploy mta_archives/express-ts-btp-api.mtar"
+  },
+  "devDependencies": {
+    "cross-var": "^1.1.0",
+    "mbt": "^1.2.1",
+    "npm-run-all": "^4.1.5"
+  }
 }
